tests/neg-custom-args/captures/leaky.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:17:11 ----------------------------------------
17 |  Transform(f)  // error
   |  ^^^^^^^^^^^^
   |  Found:    test.runnable.Transform{val fun: (f : Any ->{a} Any)}^{f}
   |  Required: test.runnable.Transform
   |
   |  Note that capability `f` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:24:2 -----------------------------------------
24 |  x  // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{f} Any}^{x}
   |  Required: test.runnable.Transform
   |
   |  Note that capability `x` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:31:2 -----------------------------------------
31 |  x  // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{f} Any}^{x}
   |  Required: test.runnable.Transform
   |
   |  Note that capability `x` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
